feat(inventory-service):  - Redis & Lua config: Add Jackson annotations for Instant field serialization. Implement Lua scripts for atomic inventory deduction. Morevere created Lua script file for management and debug.  - Cronjob: Add scheduled task to warm up inventory data and sync quantity changes from Redis to Database every 2 minutes.  - Saga Orchestration: Implement compensation logic (rollback) for product service using Lua scripts to ensure data consistency.